--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -179,17 +179,17 @@ While the example above is informal, formal qualitative representations of space
 
 %The advantages to QSR include reducing the search space of the spatial environment, using a higher level of abstraction that is closer to the conceptual representation of space that humans use...
 
-\subsubsection{Qualitative Spatial Calculi}
-\begin{figure}[t]
- \centering
- \subfloat[RCC]{\label{RCC}\includegraphics[width=43mm]{rcc8-primitives}}
- \hspace{7 mm}
- \subfloat[SCC]{\label{SCC}\includegraphics[width=40mm]{scc-dcc-xfig}}
-  \hspace{7 mm}
- \subfloat[OPRA$_{2}$]{\label{OPRA}\includegraphics[width=43mm]{OPRA2_Example}}
- \caption{Artefactual Extensions}
-\label{Qualitative Spatial Calculi}
-\end{figure}
+%\subsubsection{Qualitative Spatial Calculi}
+%\begin{figure}[t]
+% \centering
+% \subfloat[RCC]{\label{RCC}\includegraphics[width=43mm]{rcc8-primitives}}
+% \hspace{7 mm}
+% \subfloat[SCC]{\label{SCC}\includegraphics[width=40mm]{scc-dcc-xfig}}
+%  \hspace{7 mm}
+% \subfloat[OPRA$_{2}$]{\label{OPRA}\includegraphics[width=43mm]{OPRA2_Example}}
+% \caption{Artefactual Extensions}
+%\label{Qualitative Spatial Calculi}
+%\end{figure}
 
 Formal qualitative spatial calculi are explicit characterizations of qualitative spatial relationships from a given perspective, i.e. topology, orientation, distance, etc., that logically define intrinsic spatial properties such as spatial uniqueness and spatial composition. Examples of qualitative spatial calculi that are important for this thesis include, the Region Connection Calculus (RCC) \cite{Randell92aspatial} for topological relationships, the Single Cross Calculus (SCC) for extrinsic orientational relationships \cite{Freksa92usingorientation} and Oriented Point Relation Algebra (OPRA) \cite{Moratz} for intrinsic orientational relationships.
 
@@ -428,12 +428,12 @@ The following section introduces the high level design and implementation of the
 \section{Design and Approach}
 The design and implementation of the CRR is based on the design hierarchy as illustrated in Figure \ref{hierarchy no-links}. As with the architectural design hierarchy, the CRR breaks the problem down into a design space module, quality space module, and quantitative space module. At the top level, the design space model is responsible for the representation of and reasoning about architectural concepts and spatial qualities found in architecture. This module will be used as the basis for building conceptual requirements. The middle level of the hierarchy, the quality space module, represents the design based on qualitative spatial relationships of orientation, topology and distance. Within the CRR, qualitative spatial relationships are defined using formal qualitative spatial calculi such as the Region Connection Calculus for topological relationships, the Single Cross Calculus for extrinsic orientational relationships and the Oriented Point Relational Algebra for intrinsic orientational relationships. The lowest level of the hierarchy, the quantity space module, is responsible for representing the design in terms of its physical and artefactual form.
 
-\begin{figure}[t]
-\centering
-\includegraphics[width=140mm]{spatial-qualities-hierarchy-nolinks}
-\caption{Design Space Multi-Hierarchy}
-\label{hierarchy no-links}
-\end{figure}
+%\begin{figure}[t]
+%\centering
+%\includegraphics[width=140mm]{spatial-qualities-hierarchy-nolinks}
+%\caption{Design Space Multi-Hierarchy}
+%\label{hierarchy no-links}
+%\end{figure}
 
 Given these three modules, the main issue now becomes how each level interfaces with each other. In other words, how do concepts in the design space relate to qualitative spatial relationships in the quality space, and similarly, how do qualitative spatial relationships in the quality space relate to geometric objects in the quantity space. At the core of this is the qualitative module, an intermediary layer that interfaces between the design and quantitative modules. 
 
@@ -511,14 +511,14 @@ An artefactual extension is a non-physical, spatial extension of an architectura
 There are three types of spatial artefacts identified by Bhatt\cite{Bhatt} that are represented in the CRR: \emph{operational space}, \emph{functional space}, and \emph{range space}.
 
 
-\begin{figure}[H]
- \centering
- \subfloat[Artefactual Extensions]{\label{Artefactual Extensions}\includegraphics[width=60mm]{artefacts2}}
- \hspace{7 mm}
- \subfloat[Functional Space (FS), Operational Space (OS), Range Space (RS)]{\label{artefactual extensions seperate}\includegraphics[width=70mm]{artefacts}}
- \caption{Artefactual Extensions, Source \cite{bhatt-spatial-computing}}
-\label{artefactual-extensions}
-\end{figure}
+%\begin{figure}[H]
+% \centering
+% \subfloat[Artefactual Extensions]{\label{Artefactual Extensions}\includegraphics[width=60mm]{artefacts2}}
+% \hspace{7 mm}
+% \subfloat[Functional Space (FS), Operational Space (OS), Range Space (RS)]{\label{artefactual extensions seperate}\includegraphics[width=70mm]{artefacts}}
+% \caption{Artefactual Extensions, Source \cite{bhatt-spatial-computing}}
+%\label{artefactual-extensions}
+%\end{figure}
 
 %\begin{figure}[H]
 % \centering
@@ -831,22 +831,22 @@ The distance constraint solver is written using CHR that break down the constrai
 
 
 \chapter{Design Space} \label{conceptual requirements}
-This Chapter presents the conceptual requirements reasoning framework of the CRR that pertains to the design space in the architectural design hierarchy. It shows how architectural concepts and qualitative spatial attributes found in architecture (QSA) can be spatially interpreted using formal qualitative spatial calculi and shows how they can be represented and reasoned with to validate conceptual design requirements. 
+This Chapter presents the design space module of the CRR. It identifies a set of qualitative spatial attributes found in architecture (QSA) and a set of architectural concepts and show how both can be spatially interpreted using formal qualitative spatial calculi. Additionally, it demonstrates how they can be used to validate conceptual design requirements. 
 
-Conceptual design requirements were ascertained from literature on architectural design \cite{tbd}, museum research on visitor behavior \cite{tbd}, and building regulations and codes \cite{tbd}. Their definitions are explicit characterizations of architectural concepts and spatial design qualities that are based on heuristic architectural knowledge and common sense notions of spatial relationships. The objective is not to be an exhaustive discussion of these requirements or a validation for their interpretation in terms of a spatial or design perspective; rather it is to demonstrate how each can be represented and reasoned with in the CRR CLP framework. 
+QSA and architectural concepts were ascertained from literature on architectural design \cite{tbd}, museum research on visitor behavior \cite{tbd}, and building regulations and codes \cite{tbd}. Their definitions are explicit characterizations of spatial design concepts that are based on heuristic architectural knowledge and common sense notions of spatial relationships. The objective here is not to be an exhaustive discussion of spatial design concepts or a validation for their spatial interpretation; rather it is to demonstrate how each can be represented and reasoned with in the CRR CLP framework. 
 
-In the CRR CLP framework, QSA and architectural concepts utilize the CRR design representation structure, via the spatial abstraction layer, and the DSpace spatial reasoner to validate conceptual design requirements. QSA and architectural concepts are implemented as Prolog rules. Each rule is implemented as a conjunction of predicates that spatially define the QSA and architectural concepts from a qualitative perspective. Conceptual design requirements can be specified using QSA, architectural concepts, and qualitative spatial relationships. Validating a design requirement happens by making a Prolog query to the CCR that will return \emph{true} if the design is consistent per the requirement or \emph{fail} if the design is inconsistent per the requirement. 
+%In the CRR CLP framework, QSA and architectural concepts utilize the CRR design representation structure, via the spatial abstraction layer, and the DSpace spatial reasoner to validate conceptual design requirements. QSA and architectural concepts are implemented as Prolog rules. Each rule is implemented as a conjunction of predicates that spatially define the QSA and architectural concepts from a qualitative perspective. Conceptual design requirements can be specified using QSA, architectural concepts, and qualitative spatial relationships. Validating a design requirement happens by making a Prolog query to the CCR that will return \emph{true} if the design is consistent per the requirement or \emph{fail} if the design is inconsistent per the requirement. 
 
-The chapter is structured as follows: Section one presents a set of qualitative spatial attributes found in architecture, and shows how each can be interpreted using formal qualitative spatial calculi and represented within the CRR. Section two presents a set of architectural concepts that can be used to reason about design requirements within the CRR. Section 3 shows how conceptual design requirements can be validated using the CRR.
+This Chapter is structured as follows: Section One presents a set of qualitative spatial attributes found in architecture and defines each using formal qualitative spatial calculi. Section Two presents a set of architectural concepts that are defined using QSA and spatial relationships. Section Three demonstrates how conceptual design requirements can be validated within the framework presented in this Chapter.
 
 
 \section{Qualitative Spatial Attributes found in Architecture}
-This section presents a set of qualitative spatial attributes found in architecture (QSA) and shows how each QSA is spatially interpreted and represented in the CRR. QSAs are architectural qualities that emerge from the spatial characteristics that are formed by architectural entities with regard to their spatial relationships to each other. QSAs can be perceptual qualities that are described from a specific vantage point, or intrinsic qualities that are inherent in the build's spatial structure. 
+This section presents a set of qualitative spatial attributes found in architecture (QSA) and formally defines each QSA using qualitative spatial calculi. QSA are qualities that emerge from a design's spatial characteristics with regards to the spatial relationships between architectural entities. QSA can be perceptual qualities that are described from a specific vantage point, or intrinsic qualities that are inherent in the design's spatial structure. 
 
-This section presents five QSAs: positioning, positioning for sequences, facing, visibility, and proximity. The goal of this section is to develop a set of QSAs that qualitatively describe architectural designs from an experiential perspective. Some boundary cases are identified and handled, but it is not the purpose here to explore all possible case scenarios.
+This section presents five QSA: positioning, positioning for sequences, facing, visibility, and proximity. The goal of this section is to develop a set of QSA that qualitatively describe architectural designs from an experiential perspective. %Some boundary cases are identified and handled, but it is not the purpose here to explore all possible case scenarios.
 
 \subsection{Positioning}
-The positioning attribute defines an orientational relationship between a pair of objects as each object relates to the other within an extrinsic context, i.e., a defined space such as a room, apartment, building, or user defined space. There are four positioning relationships using this scheme: opposing-side of space, same-side of space, left-side of space, and right-side of space. The opposing-side and same-side relationships can be combined, via conjunction, with the left-side or right-side relationships to form the following compound relationships: opposing-left-side, opposing-right-side, same-left-side, same-right-side.
+The positioning attribute defines an orientational relationship between a pair of objects as each object relates to the other within an extrinsic context, i.e., a defined space such as a room, apartment or building. There are four positioning relationships using this scheme: opposing-side of space, same-side of space, left-side of space, and right-side of space. The opposing-side and same-side relationships can be combined, via conjunction, with the left-side or right-side relationships to form the following compound relationships: opposing-left-side, opposing-right-side, same-left-side, same-right-side.
 
 \begin{figure}[H]
 \centering
@@ -864,13 +864,13 @@ The positioning attribute is interpreted spatially using the SCC \cite{Freksa92u
 \label{scc}
 \end{figure}
 
-Using this scheme, two points are defined as being on opposing sides of a space if they have an SCC relationship of 0, 1 or 7, as related by the centroid of the space. Conversely, a pair of points are defined as being on the same side of a space if they have an SCC relationship of 3, 4 or 5, as related by the centroid of the  space. A point is defined as being on the left side of a space from another point if it has an SCC relationship of 5, 6, or 7, and is on the right side if it has an SCC relationship of 1, 2, or 3. Using the union set operation these relationships can be combined to form the opposing-left/right, and same-left/right relationships.
+Using this scheme, two points are defined as being on opposing sides of a space if they have an SCC relationship of 0, 1 or 7, as related by the centroid of the space. Conversely, a pair of points are defined as being on the same side of a space if they have an SCC relationship of 2, 3, 4, 5 or 6, as related by the centroid of the  space. A point is defined as being on the left side of a space from another point if it has an SCC relationship of 5, 6, or 7, and is on the right side if it has an SCC relationship of 1, 2, or 3. Using the union set operation these relationships can be combined to form the opposing-left/right, and same-left/right relationships.
 
-Th positioning relationships are represented in the CRR CLP framework as Prolog rules. There is a single rule for each relationships: opposing side, same-side, left-side, and right-side. The head of each rule takes three arguments, the first two are crr\_ids for the architectural entities being related and one for the context space. The body of the rule defines the SCC relationships of each positioning quality. The following is Prolog code for opposing-side and same-side positioning rules.
+These positioning relationships are implemented in the CRR as Prolog rules. There is a single rule for each relationships: opposing-side, same-side, left-side, and right-side. The head of each rule takes three arguments, the first two are crr\_ids for the architectural entities being related and one for the context space. The body of the rule defines the SCC relationships of each positioning quality. The following is Prolog code for opposing-side and same-side positioning rules.
 \begin{verbatim}
-   opposing_side(Obj1, Obj2, Context) :- 
-           centroid(Context, Centroid),
-           (scc(Obj1, Centroid, Obj2, 0);
+   opposing_side(Origin, Referent, Relatum) :- 
+           centroid(Relatum, Centroid),
+           (scc(Origin, Centroid, Relatum, 0);
             scc(Obj1, Centroid, Obj2, 1);
             scc(Obj1, Centroid, Obj2, 7)).
                                           
@@ -884,24 +884,24 @@ Th positioning relationships are represented in the CRR CLP framework as Prolog 
 
 \end{verbatim}
 
-The positioning attribute can be used to check if architectural structures, artefactual extensions, or interior design elements are on the opposing or same side of a space to the other. For example, a requirement might state that a bedroom should be positioned to the back of a house from the main entrance. The reason for this requirement is that rooms that are in the back of a house are more private than rooms in the front of the house. In this requirement, the origin is the entrance, the referent is the bedroom, and the relatum is the centroid of the house (context space). 
+The positioning attribute can be used to query if architectural entities or interior design elements are on the opposing or same, left, or right side of a space to the other. For example, a design requirement might state that a bedroom should be positioned to the back of a house from the main entrance. The reason for this requirement is that rooms that are in the back of a house are more private than rooms in the front of the house. In this requirement, the origin is the entrance, the referent is the bedroom, and the relatum is the centroid of the house. Figure \ref{bedroom-positioning} shows a bedroom that is on the opposing side of and apartment from the main entrance. 
 \begin{figure}[H]
  \centering
  \includegraphics[width=95mm]{bedroom-back-house}
- \caption{Bedroom Privacy}
-\label{privacy}
+ \caption{Bedroom Positioning}
+\label{bedroom-positioning}
 \end{figure}
 
 
 
 \subsection{Positioning for Sequences}
-The positioning for a sequences attribute defines a perceptual orientational relationship of a sequence of objects as each relates to a vantage point in an extrinsic context, i.e., a defined space such as a room, apartment, building, or user defined space. A sequence is a set of architectural entities, or interior design objects that are grouped together. In general sequences are grouped together based on the proximity of the objects (near to each other) but any relationship can define a sequence. There are three positioning relationships for a sequence of objects: horizontal perceived, vertical perceived, and neither.  
+The positioning for sequences attribute defines a perceptual orientational relationship of a sequence of objects as each relates to a vantage point in an extrinsic context, i.e., a defined space such as a room, apartment or building. A sequence is a set of architectural entities, or interior design objects that are grouped together. In general sequences are grouped together based on the proximity of the objects (near to each other) but any relationship can define a sequence. There are three positioning relationships for a sequence of objects: horizontal perceived, vertical perceived, and neither.  
 
-The positioning for a sequence of objects attribute can be spatially interpreted using SCC, similar to the positioning attribute above. The positioning for a sequence of objects attribute uses the SCC partitioning scheme to orientationally relate a sequence of points (origin, referents) in the context of an external frame of reference (relatum). In the CRR, the reference point is defined as the centroid of the context space. By partitioning space using the centroid, an approximation is made that divides the space into the positioning relationships. As with the positioning attribute, an assumption made here is that the space will generally be rectangular in shape.
+The positioning for sequence of objects attribute can be spatially interpreted using SCC. This quality uses the SCC partitioning scheme to orientationally relate a sequence of points (origin, referents) in the context of an external frame of reference (relatum). In the CRR, the reference point is defined as the centroid of the context space. By partitioning space using the centroid, an approximation is made that divides the space into the positioning relationships. As with the positioning attribute, an assumption made here is that the space will generally be rectangular in shape.
 
-Using the SCC partitioning of space, a sequence of objects is perceived horizontally from the vantage point if the sequence of points have the following combination of SCC relationships (origin is vantage point, relatum is context centroid, referent is sequence point): at least one point in the sequence has an SCC relationship of 5, 6, or 7 and at least one point has an SCC relationship of 1,2, or 3. A sequence of points is perceived vertically if they have the following combination of SCC relationships: at least one point in the sequence has an SCC relationship of 5 or 3 and at least one point in the sequence has an SCC relationship of 0, 1, or 7. Sequences can be both vertical and horizontal at the same time or they can be neither. The neither relationship is defined by a sequence of object that do not match any of the sets above.
+Using the SCC partitioning of space, a sequence of objects is perceived horizontally from the vantage point if at least one point in the sequence has an SCC relationship of 5, 6, or 7 and at least one point has an SCC relationship of 1,2, or 3. A sequence of points is perceived vertically if they have the following combination of SCC relationships: at least one point in the sequence has an SCC relationship of 5 or 3 and at least one point in the sequence has an SCC relationship of 0, 1, or 7. Sequences can be both vertical and horizontal at the same time or they can be neither. The neither relationship is defined by a sequence of object that do not match any of the above sets.
 
-Th positioning for a sequence of objects relationships are represented in the CRR as Prolog rules. There is a single rule for each relationship: horizontally perceived, vertically perceived, or neither. The head of each rule takes three arguments, the first for the the vantage point, the second is a list of architectural entities that represent the sequence and the third is the context space. Given a vantage point, a sequence of objects and a context space, the rule returns true if the objects are on the horizontally perceived, vertically perceived, diagonally perceived, or confined as defined by its rule, and fails if they are not. The following is Prolog code for the positioning rules.
+Th positioning for a sequence of objects relationships are represented in the CRR as Prolog rules. There is a single rule for each relationship: horizontally perceived, vertically perceived, or neither. The head of each rule takes three arguments, the first for the the vantage point, the second is a list of architectural entities that represent the sequence and the third is the context space. The following is Prolog code for the positioning rules.
 \begin{verbatim}
    horizontally_perceived(vantage_point, seq_list, context) :-
            centroid(context, Centroid),
@@ -925,7 +925,7 @@ The facing attribute defines an intrinsic orientational relationship between two
 \label{display-arrangement}
 \end{figure}
 
-The facing attribute is spatially modelled in the CRR using the Oriented Point Relation Algebra \cite{Moratz} (OPRA). The advantage of using OPRA is that it models the intrinsic orientational relationships between a pair of directed points. Using OPRA$_{8}$, the facing attribute can be defined in terms of the half plane sectors. Point \emph{A} is facing towards point \emph{B}, if \emph{B} is located in sectors 0, 1, or 31 of \emph{A}'s partitioned space. Similarly, if \emph{A} is located in sectors 0, 1, or 31 of \emph{B}'s partitioned space then \emph{B} is facing towards \emph{A}. In this case, both points are facing towards each other. Conversely, point \emph{A} is facing away from point \emph{B} if \emph{B} is located in sectors 2 - 30 of \emph{A's} partitioned space. A granularity of 8 is used (i.e., OPRA$_{8}$) to define a narrow interpretation of the facing attribute. 
+The facing attribute is spatially defined in the CRR using the Oriented Point Relation Algebra (OPRA) \cite{Moratz}. The advantage of using OPRA is that it models the intrinsic orientational relationships between a pair of directed points. Using OPRA$_{8}$, the facing attribute can be defined in terms of the half plane sectors. Point \emph{A} is facing towards point \emph{B}, if \emph{B} is located in sectors 0, 1, or 31 of \emph{A}'s OPRA$_{8}$ partitioned space. Similarly, if \emph{A} is located in sectors 0, 1, or 31 of \emph{B}'s OPRA$_{8}$ partitioned space then \emph{B} is facing towards \emph{A}. In this case, both points are facing towards each other. Conversely, point \emph{A} is facing away from point \emph{B} if \emph{B} is located in sectors 2 - 30 of \emph{A's} partitioned space. A granularity of 8 is used in OPRA (i.e., OPRA$_{8}$) to define a narrow interpretation of the facing attribute. 
 
 %Within a room, doorways, windows, and walls are generally face towards each other. By narrowing the space that is considered facing towards, it allows DSpace to detect elements that are more directly facing towards each other.
 
@@ -944,7 +944,7 @@ Figure \ref{fig:facing-opra-towards} shows an example of two points facing towar
 \label{opra-facing}
 \end{figure}
 
-The facing attribute is represented in the CRR as Prolog rules. There is one rule for facing-towards and one for facing-away. The head of each rule takes two arguments for the architectural entities being related. The body of the rule is a single disjunctive clause that checks for the OPRA$_{8}$ relationship between the architectural entities. Given two architectural objects, the rule returns true if the architectural entities are facing towards or away from each other as defined by the rule, and fails if they are not. The following is Prolog code for the facing rules.
+The facing attribute is implemented in the CRR as Prolog rules. There is one rule for facing-towards and one for facing-away. The head of each rule takes two arguments for the architectural entities being related. The body of the rule is a single disjunctive clause that checks for the OPRA$_{8}$ relationship between the architectural entities. Given two architectural objects, the rule returns true if the architectural entities are facing towards or away from each other as defined by the rule, and fails if they are not. The following is Prolog code for the facing rules.
 
 \begin{verbatim}
    facing_towards(Obj1, Obj2) :- 
@@ -956,7 +956,7 @@ The facing attribute is represented in the CRR as Prolog rules. There is one rul
            (facing_towards(Obj1, Obj2) -> fail; true).                     
 \end{verbatim}
 
-In the CRR, the facing attribute can be used to check if two architectural structures, artefactual extensions, or interior design elements are facing towards or away from each other. For example, doorways and windows that face towards each other promote airflow through the space they inhibit. A design that requires good air circulation could use this knowledge to ensure proper airflow. Figure \ref{door-window-facing} shows two example floor plans of a room with a window and doorway. Figure \ref{fig:door-window-towards} shows a configuration were the doorway and window are facing towards each other, while figure \ref{fig:door-window-away} shows a configuration where the doorway and window are facing away from each other. 
+In the CRR, the facing attribute can be used to check if two architectural entities or interior design elements are facing towards or away from each other. For example, doorways and windows that face towards each other promote airflow through the space they inhibit. A design that requires good air circulation could use this knowledge to ensure proper airflow. Figure \ref{door-window-facing} shows two example floor plans of a room with a window and doorway. Figure \ref{fig:door-window-towards} shows a configuration were the doorway and window are facing towards each other, while figure \ref{fig:door-window-away} shows a configuration where the doorway and window are facing away from each other. 
 
 \begin{figure}[H]
  \centering
@@ -981,7 +981,7 @@ The proximity attribute defines a qualitative distance relationship between two 
 \label{proximity}
 \end{figure}
 
-Using these heuristics, two objects are near if the minimum distance between them is less then or equal to 3 meters, near+ if the minimum distance between then is between 3 - 6 meters, and far if the minimum distance between them is greater then 3 meters. While the definition of proximity pivots around 3 and 6 meters, it can easily be changed by using an extra parameter in a proximity predicate. 
+Using these heuristics, two objects are near if the minimum distance between them is less then or equal to 3 meters, near+ if the minimum distance between then is between 3 - 6 meters, and far if the minimum distance between them is greater then 3 meters. %While the definition of proximity pivots around 3 and 6 meters, it can easily be changed by using an extra parameter in a proximity predicate. 
 
 Proximity is represented in the CRR as three Prolog rules. There is one rule for near, one for near+, and one for far. The head of each rule takes two arguments for the architectural entities being related. Given two architectural entities, the rule returns true if the objects are near, near+, or far from each other as defined by the rule, and fails if they are not. The following is Prolog code for the proximity rules.
 
@@ -998,7 +998,7 @@ Proximity is represented in the CRR as three Prolog rules. There is one rule for
 
 \end{verbatim}
 
-The proximity attribute can be used to check whether two architectural entities are near or far. For example, a computer desk should be located near a power outlet to make it easy to power up the desk's computer and desk's lamp. Another example is the bathroom should be far away from the kitchen, in order to keep a separation between the two.
+The proximity attribute can be used to check whether two architectural entities are near or far. For example, a computer desk should be located near a power outlet to make it easy to power up the desk's computer and desk's lamp. Figure \ref{desk-proximity} shows a desk that is located near a power outlet and another that is not. %Another example is the bathroom should be far away from the kitchen, in order to keep a separation between the two.
 
 \begin{figure}[H]
  \centering
@@ -1008,7 +1008,7 @@ The proximity attribute can be used to check whether two architectural entities 
 \end{figure}
 
 \subsection{Visibility}
-The visibility attribute defines a boolean relationship between a viewpoint and an object with respect to the object being visible from the viewpoint. This interpretation of visibility is based on the topological characteristics of an object blocking (obstructing) a view. It does not take into account the material characteristics of the obstructing object, such as glass, which would allow visibility through the obstructing object. Additionally it does not take into account the effects of distance on visibility, i.e., an object that is very far away is not visible. However, within the context of architecture and buildings, the magnitude of distances is limited to a point that it is not a factor to visibility. Under this definition, an objects is visible if the view-space (i.e., the space between the viewpoint and the object) is not obstructed.
+The visibility attribute defines a boolean relationship between a viewpoint and an object with respect to the object being visible from the viewpoint. This interpretation of visibility is based on the topological characteristics of an object blocking (obstructing) a view. It does not take into account the material characteristics of the obstructing object, such as glass, which would allow visibility through the obstructing object. Additionally it does not take into account the effects of distance on visibility, i.e., an object that is very far away is not visible. However, within the context of architecture, the magnitude of distances is limited to a point that it is not a factor in this interpretation of visibility. Under this definition, an objects is visible if the view-space, the space between the viewpoint and the object, is not obstructed.
 
 The spatial interpretation of visibility is based on the topological characteristics of the space in-between the viewpoint and object. This space is referred to as the view-space. An object is visible if the view-space is not obstructed by surrounding structures or objects. An obstructing object is an object that has a partially overlapping or containing topological relationship with the view-space. Artefactual extension is not considered as an obstructing object because it does not have a physical form. This definition does not distinguish between visibility that is partially or totally obstructed.
 
@@ -1021,7 +1021,7 @@ The spatial interpretation of visibility is based on the topological characteris
 \label{Visibility}
 \end{figure}
 
-Visibility is represented in the CRR as a single Prolog rule. The head of the rule takes two arguments, the viewpoint and the object that is being check for visibility. The body of the clause calculates the view-space and checks the surrounding objects for a topological obstruction. Surrounding objects are all of the architectural entities that are contained in the same room as the vantage point and object. If the vantage point and object are in different rooms they are not defined as being not visible.
+Visibility is represented in the CRR as a single Prolog rule. The head of the rule takes two arguments, the viewpoint and the object that is being check for visibility. The body of the clause calculates the view-space and checks the surrounding objects for a topological obstruction. Surrounding objects are architectural entities that are contained in the same room as the vantage point and object. If the vantage point and object are in different rooms the object is not visible.
 
 Given a viewpoint and an object, the rule returns true if the object is visible, and fails if it is not. The following is the Prolog code for the visibility rule.
 \begin{verbatim}
@@ -1339,24 +1339,24 @@ This section presents the application of the CRR for validating art museum desig
 \subsection{Museum Designs and Import}
 The museum floor plans used in this case study are based off the Asian Art Wing of the Philadelphia Museum of Art \cite{PhiladelphiaArtMuseum} and the lobby of the Museu Calouste Gulbenkian. The Philadelphia Museum of Art will be used for the demonstration of the gallery requirements and the Museu Calouste Gulbenkian will be used for the demonstration of the lobby requirements. The motivation behind basing the designs off a real world museums instead of a contrived examples is to demonstrate the CRR in a real world context with regards to the applicability of museum design requirements using a real world design examples.
 
-\begin{figure}[H]
- \centering
- \subfloat[2nd Floor]{\label{art museum}\includegraphics[width=78mm]{philadelphiamuseum}}
- \hspace{10 mm}
- \subfloat[Asian Wing]{\label{asian wing}\includegraphics[width=45mm]{asianwing}}
- \caption{Philadelphia Art Museum Floor-plan - Source \cite{philadelphiamusem}}
-\label{art-museums}
-\end{figure}
+%\begin{figure}[H]
+% \centering
+% \subfloat[2nd Floor]{\label{art museum}\includegraphics[width=78mm]{philadelphiamuseum}}
+% \hspace{10 mm}
+% \subfloat[Asian Wing]{\label{asian wing}\includegraphics[width=45mm]{asianwing}}
+% \caption{Philadelphia Art Museum Floor-plan - Source \cite{philadelphiamusem}}
+%\label{art-museums}
+%\end{figure}
 
 Gallery rooms 226 and 238 - 244 of the Asian Wing at the \emph{Philadelphia Museum of Art} and the lobby of the \emph{Museu Calouste Gulbenkian} were manually built in ArchiCAD 14. The dimension and scale of the rooms where obtained from the museum to ensure as much accuracy to the real design as possible. Benches, display cases and states were manually added to demonstrate some of the museum requirements. Figure \ref{art museum in archiCAD} shows the floor plans in ArchiCAD.
 
 
-\begin{figure}[h]
-\centering
-\includegraphics[width=90mm]{art-museum-archicad-crop}
-\caption{Asian Wing in ArchiCAD}
-\label{art museum in archiCAD}
-\end{figure}
+%\begin{figure}[h]
+%\centering
+%\includegraphics[width=90mm]{art-museum-archicad-crop}
+%\caption{Asian Wing in ArchiCAD}
+%\label{art museum in archiCAD}
+%\end{figure}
 
 %\begin{figure}[h]
 %\centering
